@@ -4,15 +4,14 @@ import com.depromeet.domain.feed.dto.response.FeedOneByProfileResponse;
 import com.depromeet.domain.feed.dto.response.FeedOneResponse;
 import com.depromeet.domain.follow.dao.MemberRelationRepository;
 import com.depromeet.domain.member.domain.Member;
-import com.depromeet.domain.mission.dao.MissionRepository;
-import com.depromeet.domain.mission.domain.Mission;
 import com.depromeet.domain.mission.domain.MissionVisibility;
 import com.depromeet.domain.missionRecord.dao.MissionRecordRepository;
 import com.depromeet.domain.missionRecord.domain.MissionRecord;
 import com.depromeet.global.util.MemberUtil;
+import com.depromeet.global.util.SecurityUtil;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Objects;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -22,79 +21,73 @@ import org.springframework.transaction.annotation.Transactional;
 @RequiredArgsConstructor
 public class FeedService {
     private final MemberUtil memberUtil;
-    private final MissionRepository missionRepository;
     private final MissionRecordRepository missionRecordRepository;
     private final MemberRelationRepository memberRelationRepository;
+    private final SecurityUtil securityUtil;
 
     @Transactional(readOnly = true)
     public List<FeedOneResponse> findAllFeed() {
         final Member currentMember = memberUtil.getCurrentMember();
         List<Long> sourceIds =
-                new ArrayList<>(
-                        memberRelationRepository.findAllBySourceId(currentMember.getId()).stream()
-                                .map(memberRelation -> memberRelation.getTarget().getId())
-                                .toList());
+                memberRelationRepository.findAllBySourceId(currentMember.getId()).stream()
+                        .map(memberRelation -> memberRelation.getTarget().getId())
+                        .collect(Collectors.toList());
         sourceIds.add(currentMember.getId());
 
         return missionRecordRepository.findFeedAll(sourceIds);
     }
 
     public List<FeedOneByProfileResponse> findAllFeedByTargetId(Long targetId) {
-        Member sourceMember = memberUtil.getCurrentMember();
+        final Long sourceId = securityUtil.getCurrentMemberId();
 
-        /*
-         본인 프로필 findFeedBySourceMember
-         targetId가 본인이다.
-         그렇다면 공개 여부 상관없이 full-scan
-
-         타인 프로필 findFeedByTargetMember
-         만약 sourceId와 targetId가 다르다.
-         그렇다면 공개 여부에서 비공개는 exclude 한다.
-         추가로 내가 타인 프로필에서 팔로잉 관계가 이뤄졌는지 여부 확인하여 팔로우 관계 여부 체크
-        */
-        if (!targetId.equals(sourceMember.getId())) {
-            return findFeedByTargetMember(sourceMember, targetId);
-        } else {
-            return findFeedBySourceMember(sourceMember);
+        if (!isMyFeedRequired(targetId, sourceId)) {
+            return findFeedByOtherMember(sourceId, targetId);
         }
+        return findFeedByCurrentMember(sourceId);
     }
 
-    private List<FeedOneByProfileResponse> findFeedByTargetMember(
-            Member sourceMember, Long targetId) {
+    private boolean isMyFeedRequired(Long targetId, Long sourceId) {
+        return targetId.equals(sourceId);
+    }
+
+    private List<FeedOneByProfileResponse> findFeedByOtherMember(Long sourceId, Long targetId) {
         final Member targetMember = memberUtil.getMemberByMemberId(targetId);
-        List<MissionVisibility> visibilities = new ArrayList<>(List.of(MissionVisibility.ALL));
 
         // 팔로우 관계 true: visibility.FOLLOW and ALL, false: visibility.ALL only
-        boolean existMemberRelation =
+        boolean isMemberRelationExistsWithMe =
                 memberRelationRepository.existsBySourceIdAndTargetId(
-                        sourceMember.getId(), targetMember.getId());
-        if (existMemberRelation) {
-            visibilities.add(MissionVisibility.FOLLOWER);
-        }
-        if (sourceMember.getId().equals(targetId)) {
-            visibilities.add(MissionVisibility.FOLLOWER);
-            visibilities.add(MissionVisibility.NONE);
-        }
-        List<Mission> feedAllByMemberId =
-                missionRepository.findFeedAllByMemberId(targetId, visibilities);
+                        sourceId, targetMember.getId());
+
+        List<MissionRecord> feedAllByMemberId =
+                missionRecordRepository.findFeedAllByMemberId(
+                        targetId,
+                        determineVisibilityConditionsByRelationsWithMe(
+                                isMemberRelationExistsWithMe));
         return extractFeedResponses(feedAllByMemberId);
     }
 
-    private List<FeedOneByProfileResponse> findFeedBySourceMember(Member sourceMember) {
-        List<Mission> feedAllByMemberId =
-                missionRepository.findFeedAllByMemberId(sourceMember.getId(), null);
+    private List<FeedOneByProfileResponse> findFeedByCurrentMember(Long sourceId) {
+        List<MissionVisibility> visibilities =
+                List.of(MissionVisibility.NONE, MissionVisibility.FOLLOWER, MissionVisibility.ALL);
+        List<MissionRecord> feedAllByMemberId =
+                missionRecordRepository.findFeedAllByMemberId(sourceId, visibilities);
         return extractFeedResponses(feedAllByMemberId);
     }
 
-    private List<FeedOneByProfileResponse> extractFeedResponses(List<Mission> missions) {
-        return missions.stream()
-                .flatMap(
-                        mission -> {
-                            List<MissionRecord> missionRecords = mission.getMissionRecords();
-                            return missionRecords.stream()
-                                    .filter(Objects::nonNull)
-                                    .map(record -> FeedOneByProfileResponse.of(mission, record));
-                        })
+    private List<FeedOneByProfileResponse> extractFeedResponses(List<MissionRecord> records) {
+        return records.stream()
+                .map(record -> FeedOneByProfileResponse.of(record.getMission(), record))
                 .toList();
+    }
+
+    private List<MissionVisibility> determineVisibilityConditionsByRelationsWithMe(
+            boolean isMemberRelationExistsWithMe) {
+        List<MissionVisibility> visibilities = new ArrayList<>();
+        visibilities.add(MissionVisibility.ALL);
+
+        if (isMemberRelationExistsWithMe) {
+            visibilities.add(MissionVisibility.FOLLOWER);
+        }
+        return visibilities;
     }
 }
